--- a/download/corpora/AP/AP.172.antonius_dipl.html
+++ b/download/corpora/AP/AP.172.antonius_dipl.html
@@ -8,61 +8,39 @@
 
 	<title>AP.172.antonius - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><a> <!--
---><div class="line" line="4"><!--
---><hi_rend rend="extralarge illuminated red capital"><!--
---><span>Ⲁ</span><!-- end of "" --></hi_rend><!-- end of "" --><hi_rend rend="dark red, large"><!--
---><span>ⲩ</span><!-- end of "" --><span>ϭⲱⲗⲡ̇</span><!-- end of "" --></hi_rend><!-- end of "" --></div><!-- end of "line" --></a><div class="line" line="5"><!--
---><a> <!--
---><span>ⲉ̇ⲃⲟⲗ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇ⲛ</span><!-- end of "" --></a></div><div class="line" line="6"><!--
---><a><span>ⲧⲱⲛⲓ̇ⲟⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ϫⲁⲓ̇ⲉ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="7"><!--
---><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲟⲩⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲟⲩⲁ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲉⲓⲛⲉ̇</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="8"><!--
---><a> <!--
---><span>ⲙ̇ⲙⲟ</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧ̇</span><!-- end of "" --><span>ⲡⲟⲗⲓⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="9"><!--
---><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲥⲁⲉⲓ̈ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲉϥ</span><!-- end of "" --></a></div><div class="line" line="10"><!--
---><a><span>ⲧⲉⲭⲛⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="space to the right"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉϥ</span><!-- end of "" --></a></div><div class="line" line="11"><!--
---><a><span>ϩⲟⲩⲟ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲉⲧ</span><!-- end of "" --><span>ϣⲁⲁ̇ⲧ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="12"><!--
---><a> <!--
---><span>ⲁⲩⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϣⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲣ̄</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉ</span><!-- end of "" --><span>ϩⲟⲟⲩ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="13"><!--
---><a> <!--
---><span>ⲧⲏⲣ</span><!-- end of "" --><span>ϥ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲱ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϣⲟ</span><!-- end of "" --></a></div><div class="line" line="14"><!--
---><a><span>ⲙⲛⲧ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ϩⲁⲅⲓ̈ⲟⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙⲛ̇</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="15"><!--
---><a> <!--
---><span>ⲛ</span><!-- end of "" --><span>ⲁⲅⲅⲉⲗⲟⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲻ</span><!-- end of "" --></a><!-- end of "" --></div><table><!--
---><!-- end of "" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --></table><!-- end of "" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+<!--October 9, 2014 by Caroline T. Schroeder-->
+
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table><!--
+--><tbody><tr><td class="cb"><!--
+--><div class="copt_line" line="4"><!--
+--><hi_rend rend="ekthetic, red, large"><!--
+--><span>Ⲁ</span><!-- end of "" --></hi_rend><!-- end of "" --><hi_rend rend="red, large"><!--
+--><span>ⲩ</span><!-- end of "" --><span>ϭⲱⲗⲡ̇</span><!-- end of "" --></hi_rend><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="5"><!--
+--><span>ⲉ̇ⲃⲟⲗ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --><span>ⲁ̇ⲛ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="6"><!--
+--><span>ⲧⲱⲛⲓ̇ⲟⲥ</span><!-- end of "" --><span>ϩⲓ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϫⲁⲓ̇ⲉ̇</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="7"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲟⲩⲛ</span><!-- end of "" --><span>ⲟⲩⲁ̇</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲉⲓⲛⲉ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="8"><!--
+--><span>ⲙ̇ⲙⲟ</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ⲧ̇</span><!-- end of "" --><span>ⲡⲟⲗⲓⲥ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="9"><!--
+--><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲥⲁⲉⲓ̈ⲛ</span><!-- end of "" --><span>ⲡⲉ</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ⲧⲉϥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="10"><!--
+--><span>ⲧⲉⲭⲛⲉ</span><!-- end of "" --><hi_rend rend="1 space right"><!--
+--><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉϥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="11"><!--
+--><span>ϩⲟⲩⲟ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲉⲧ</span><!-- end of "" --><span>ϣⲁⲁ̇ⲧ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="12"><!--
+--><span>ⲁⲩⲱ̇</span><!-- end of "" --><span>ϣⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲣ̄</span><!-- end of "" --><span>ⲡⲉ</span><!-- end of "" --><span>ϩⲟⲟⲩ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="13"><!--
+--><span>ⲧⲏⲣ</span><!-- end of "" --><span>ϥ̇</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲱ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϣⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="14"><!--
+--><span>ⲙⲛⲧ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϩⲁⲅⲓ̈ⲟⲥ</span><!-- end of "" --><span>ⲙⲛ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="15"><!--
+--><span>ⲛ</span><!-- end of "" --><span>ⲁⲅⲅⲉⲗⲟⲥ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "" --></div></div><div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div></div>
 </body>
 </html>
