--- a/download/corpora/AP/AP.216.besarion_dipl.html
+++ b/download/corpora/AP/AP.216.besarion_dipl.html
@@ -8,132 +8,54 @@
 
 	<title>AP.216.besarion - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><!--
---><div class="line" line="6"><!--
---><a> <!--
---><span>Ⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛϭⲓ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="7"><!--
---><a> <!--
---><span>ⲁ̇ⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲇⲟⲩⲗⲟⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --></a></div><div class="line" line="8"><!--
---><a><span>ⲑⲏⲧⲏⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲃⲏⲥⲁ</span><!-- end of "" --></a></div><div class="line" line="9"><!--
---><a><span>ⲣⲓ̈ⲟⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲙⲟ̇ⲟ</span><!-- end of "" --></a></div><div class="line" line="10"><!--
---><a><span>ϣⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲁϩⲧⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲑ</span><!-- end of "" --><span>ⲁⲗⲁⲥⲥⲁ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="11"><!--
---><a> <!--
---><span>ⲁⲩⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ</span><!-- end of "" --><span>ⲓ̈</span><!-- end of "" --></a></div><div class="line" line="12"><!--
---><a><span>ϫⲟⲟ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲃⲏⲥⲁⲣⲓ̈ⲟⲛ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="13"><!--
---><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲁ</span><!-- end of "" --><span>ⲉⲓ̇ⲱⲧ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϯ̇</span><!-- end of "" --><span>ⲟ̇ⲃⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲟ</span><!-- end of "" --></a></div><div class="line" line="14"><!--
---><a><span>ⲛⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲇⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="15"><!--
---><a> <!--
---><span>Ⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϣ̇ⲗⲏⲗ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="16"><!--
---><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲥⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲑ</span><!-- end of "" --><span>ⲁⲗⲁⲥ</span><!-- end of "" --></a></div><div class="line" line="17"><!--
---><a><span>ⲥⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁⲩⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ⲙⲟⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲟⲗϭ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="18"><!--
---><a> <!--
---><span>ⲁ̇ⲛⲟⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲇⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ⲥⲱ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲻ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="19"><!--
---><a> <!--
---><span>Ⲁⲩⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><span>ϣⲏⲙ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="20"><!--
---><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲙⲟⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲡⲁ</span><!-- end of "" --><span>ⲁ̇ⲅⲅⲏⲛ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="21"><!--
---><a> <!--
---><span>ⲉ̇ⲧ</span><!-- end of "" --><span>̇ⲛ̇</span><!-- end of "" --><span>ⲧⲟⲟⲧ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϫⲱ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --></a></div><div class="line" line="22"><!--
---><a><span>ⲙⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙⲏⲡⲟⲧⲉ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲁ</span><!-- end of "" --></a></div><div class="line" line="23"><!--
---><a><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲟ̇ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="24"><!--
---><a> <!--
---><span>Ⲇⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ⲧⲉⲣⲉ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲛⲁⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="25"><!--
---><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇ⲧⲃⲉ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --><span>ⲙⲉϩ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="26"><!--
---><a> <!--
---><span>ⲙⲟⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="27"><!--
---><a> <!--
---><span>ⲕⲱ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉⲃⲟⲗ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="28"><!--
---><a> <!--
---><span>ⲙⲏⲡⲟⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲁ</span><!-- end of "" --><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --></a></div><div class="line" line="29"><!--
---><a><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲥⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲻ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="30"><!--
---><a> <!--
---><span>Ⲡⲉϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="31"><!--
---><a> <!--
---><span>ⲡ̇</span><!-- end of "" --><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --></a></div><div class="line" line="32"><!--
---><a><span>ⲧⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲟ̇ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡ</span><!-- end of "" --><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="33"><!--
---><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇ⲉⲓ̇</span><!-- end of "" --><span>ⲥⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --></div><table><!--
---><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --></table><!-- end of "" --><!-- end of "cb" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+<!--October 9, 2014 by Caroline T. Schroeder-->
+
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table><!--
+--><tbody><tr><td class="cb"><!--
+--><div class="copt_line" line="6"><!--
+--><span>Ⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲛϭⲓ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="7"><!--
+--><span>ⲁ̇ⲡⲁ</span><!-- end of "" --><span>ⲇⲟⲩⲗⲟⲥ</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="8"><!--
+--><span>ⲑⲏⲧⲏⲥ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --><span>ⲃⲏⲥⲁ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="9"><!--
+--><span>ⲣⲓ̈ⲟⲛ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲙⲟ̇ⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="10"><!--
+--><span>ϣⲉ</span><!-- end of "" --><span>ϩⲁϩⲧⲛ̇</span><!-- end of "" --><span>ⲑ</span><!-- end of "" --><span>ⲁⲗⲁⲥⲥⲁ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="11"><!--
+--><span>ⲁⲩⲱ̇</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲓ̈</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="12"><!--
+--><span>ϫⲟⲟ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲁⲡⲁ</span><!-- end of "" --><span>ⲃⲏⲥⲁⲣⲓ̈ⲟⲛ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="13"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲡⲁ</span><!-- end of "" --><span>ⲉⲓ̇ⲱⲧ</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --><span>ⲟ̇ⲃⲉ</span><!-- end of "" --><span>ⲧⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="14"><!--
+--><span>ⲛⲟⲩ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="15"><!--
+--><span>Ⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϣ̇ⲗⲏⲗ</span><!-- end of "" --><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="16"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲥⲱ̇</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ⲑ</span><!-- end of "" --><span>ⲁⲗⲁⲥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="17"><!--
+--><span>ⲥⲁ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲁⲩⲱ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ⲙⲟⲟⲩ</span><!-- end of "" --><span>ϩⲟⲗϭ̇</span><!-- end of "" --><span>.</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="18"><!--
+--><span>ⲁ̇ⲛⲟⲕ</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ⲥⲱ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="19"><!--
+--><span>Ⲁⲩⲱ̇</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><span>ϣⲏⲙ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="20"><!--
+--><span>ⲙ̇</span><!-- end of "" --><span>ⲙⲟⲟⲩ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲡⲁ</span><!-- end of "" --><span>ⲁ̇ⲅⲅⲏⲛ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="21"><!--
+--><span>ⲉ̇ⲧ</span><!-- end of "" --><span>̇ⲛ̇</span><!-- end of "" --><span>ⲧⲟⲟⲧ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϫⲱ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="22"><!--
+--><span>ⲙⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --><span>ⲙⲏⲡⲟⲧⲉ̇</span><!-- end of "" --><span>ⲧⲁ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="23"><!--
+--><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --><span>ⲟ̇ⲛ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="24"><!--
+--><span>Ⲇⲉ</span><!-- end of "" --><span>ⲛ̇ⲧⲉⲣⲉ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲛⲁⲩ</span><!-- end of "" --><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="25"><!--
+--><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --><span>ⲉ̇ⲧⲃⲉ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><span>ⲁ̇</span><!-- end of "" --><span>ⲕ</span><!-- end of "" --><span>ⲙⲉϩ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="26"><!--
+--><span>ⲙⲟⲟⲩ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="27"><!--
+--><span>ⲕⲱ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ⲉⲃⲟⲗ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="28"><!--
+--><span>ⲙⲏⲡⲟⲧⲉ</span><!-- end of "" --><span>ⲧⲁ</span><!-- end of "" --><span>ⲉⲓ̇ⲃⲉ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="29"><!--
+--><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲥⲁ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="30"><!--
+--><span>Ⲡⲉϫⲉ</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲓ̇</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="31"><!--
+--><span>ⲡ̇</span><!-- end of "" --><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="32"><!--
+--><span>ⲧⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲟ̇ⲛ</span><!-- end of "" --><span>ⲡⲉ</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="33"><!--
+--><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇ⲉⲓ̇</span><!-- end of "" --><span>ⲥⲁ</span><!-- end of "" --><span>.</span><!-- end of "" --></div><!-- end of "copt_line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "" --></div></div>
+
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
