--- a/download/corpora/AP/AP.23.isaac_dipl.html
+++ b/download/corpora/AP/AP.23.isaac_dipl.html
@@ -8,80 +8,48 @@
 	
 	<title>AP.23.isaac - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><!--
---><div class="line" line="5"><!--
---><a> <!--
+<!--October 9, 2014 by Caroline T. Schroeder-->
+
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table><!--
+--><tbody><tr><td class="cb"><!--
+--><div class="copt_line" line="5"><!--
 --><hi_rend rend="red, tall"><!--
---><span>ⲁ︤</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ϭⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇ⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲓ̇ⲥⲁⲕ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="6"><!--
---><a> <!--
---><span>ⲭ̣ⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲉⲛ</span><!-- end of "" --><span>ⲉⲓ̇ⲟ̇ⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙⲉⲛ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="7"><!--
---><a> <!--
---><span>ⲁⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲁⲙⲃⲱ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲉ</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲫⲟ</span><!-- end of "" --></a></div><div class="line" line="8"><!--
---><a><span>ⲣⲉⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ϩⲉⲛ</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --></a></div><div class="line" line="9"><!--
---><a><span>ⲡⲉⲗϭⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲧⲟⲉⲓ̇ⲥ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="10"><!--
---><a> <!--
---><span>ⲙⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲛ̇</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ϣ̇</span><!-- end of "" --></a></div><div class="line" line="11"><!--
---><a><span>ⲃⲛ̇ⲛⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>.</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ⲧⲱⲧⲛ̇</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="12"><!--
---><a> <!--
---><span>ⲇⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲉⲛⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲉⲧⲛ̇</span><!-- end of "" --><span>ⲫⲟ</span><!-- end of "" --></a></div><div class="line" line="13"><!--
---><a><span>ⲣⲉⲓ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϩⲛ̇</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --></a></div><div class="line" line="14"><!--
---><a><span>ⲧⲁⲉⲓ̇ⲏⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲃⲱⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ⲧⲱ</span><!-- end of "" --></a></div><div class="line" line="15"><!--
---><a><span>ⲧⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇</span><!-- end of "" --><span>ⲧⲉ</span><!-- end of "" --></a></div><div class="line" line="16"><!--
---><a><span>ⲧⲛ̇</span><!-- end of "" --><span>ⲧⲁⲕⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>.ⲻ</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="17"><!--
---><a> <!--
+--><span>ⲁ︤</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲛ̇ϭⲓ̇</span><!-- end of "" --><span>ⲁ̇ⲡⲁ</span><!-- end of "" --><span>ⲓ̇ⲥⲁⲕ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="6"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲛⲉⲛ</span><!-- end of "" --><span>ⲉⲓ̇ⲟ̇ⲧⲉ</span><!-- end of "" --><span>ⲙⲉⲛ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="7"><!--
+--><span>ⲁ̇ⲡⲁ</span><!-- end of "" --><span>ⲡⲁⲙⲃⲱ̇</span><!-- end of "" --><span>ⲛⲉ</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲫⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="8"><!--
+--><span>ⲣⲉⲓ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϩⲉⲛ</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="9"><!--
+--><span>ⲡⲉⲗϭⲉ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲧⲟⲉⲓ̇ⲥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="10"><!--
+--><span>ⲙⲛ̇</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϣ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="11"><!--
+--><span>ⲃⲛ̇ⲛⲉ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>.</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲛ̇ⲧⲱⲧⲛ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="12"><!--
+--><span>ⲇⲉ</span><!-- end of "" --><span>ⲧⲉⲛⲟⲩ</span><!-- end of "" --><span>ⲧⲉⲧⲛ̇</span><!-- end of "" --><span>ⲫⲟ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="13"><!--
+--><span>ⲣⲉⲓ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϩⲛ̇</span><!-- end of "" --><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="14"><!--
+--><span>ⲧⲁⲉⲓ̇ⲏⲩ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲃⲱⲕ</span><!-- end of "" --><span>ⲛ̇ⲧⲱ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="15"><!--
+--><span>ⲧⲛ̇</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉⲓ̇</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲁ̇</span><!-- end of "" --><span>ⲧⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="16"><!--
+--><span>ⲧⲛ̇</span><!-- end of "" --><span>ⲧⲁⲕⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>.ⲻ</span><!-- end of "" --></hi_rend><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="17"><!--
 --><hi_rend rend="red, tall"><!--
---><span>Ⲉ︤</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲃⲱⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲇⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲱϩⲥ̇</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="18"><!--
---><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><a> <!--
---><span>ⲛⲁ</span><!-- end of "" --><span>ⲩ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --></a></div><div class="line" line="19"><!--
---><a><span>ⲛⲁ</span><!-- end of "" --><span>ⲃⲱⲕ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲕⲟⲧ</span><!-- end of "" --><span>ⲧ̇</span><!-- end of "" --></a></div><div class="line" line="20"><!--
---><a><span>ⲉ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ⲧⲟⲗⲏ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛⲏ</span><!-- end of "" --><span>ⲧⲛ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="21"><!--
---><span>ⲛ̇</span><!-- end of "" --><span>ⲧⲉⲧⲛ̇</span><!-- end of "" --><a> <!--
---><span>ϩⲁⲣⲉϩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲅⲁⲣ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><table><!--
---><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --></table><!-- end of "" --><!-- end of "cb" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+--><span>Ⲉ︤</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲃⲱⲕ</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲱϩⲥ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="18"><!--
+--><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲩ̇</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="19"><!--
+--><span>ⲛⲁ</span><!-- end of "" --><span>ⲃⲱⲕ</span><!-- end of "" --><span>ⲁ̇ⲛ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲕⲟⲧ</span><!-- end of "" --><span>ⲧ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="20"><!--
+--><span>ⲉ̇</span><!-- end of "" --><span>ϯ̇</span><!-- end of "" --><span>ⲛ̇ⲧⲟⲗⲏ</span><!-- end of "" --><span>ⲛⲏ</span><!-- end of "" --><span>ⲧⲛ̇</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="21"><!--
+--><span>ⲛ̇</span><!-- end of "" --><span>ⲧⲉⲧⲛ̇</span><!-- end of "" --><span>ϩⲁⲣⲉϩ</span><!-- end of "" --><span>ⲅⲁⲣ</span><!-- end of "" --><span>ⲁ̇ⲛ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "" --></div></div>
+
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
