--- a/download/corpora/AP/AP.25.pambo_dipl.html
+++ b/download/corpora/AP/AP.25.pambo_dipl.html
@@ -8,61 +8,39 @@
 	
 	<title>AP.25.pambo - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><!--
---><div class="line" line="22"><!--
---><a> <!--
+<!--October 9, 2014 by Caroline T. Schroeder-->
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table><!--
+--><tbody><tr><td class="cb"><!--
+--><div class="copt_line" line="22"><!--
 --><hi_rend rend="red, tall"><!--
---><span>Ⲛ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲧⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲟ̇ⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="23"><!--
---><a> <!--
---><span>ⲁ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇ⲡⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲡⲁⲙⲃⲱ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="24"><!--
---><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲁⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲑ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇ⲧⲉ</span><!-- end of "" --><span>ϣ̇</span><!-- end of "" --></a></div><div class="line" line="25"><!--
---><a><span>ϣⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲙⲟⲛⲁⲭⲟⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ</span><!-- end of "" --></a></div><div class="line" line="26"><!--
---><a><span>Ⲫ</span><!-- end of "" --><span>ⲟⲣⲉⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ⲛⲉϥ</span><!-- end of "" --><span>ϩⲟⲓ̇ⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="27"><!--
---><a> <!--
---><span>ϩⲱⲥⲧⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲛⲉϫ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲉϥ</span><!-- end of "" --></a></div><div class="line" line="28"><!--
---><a><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ⲃⲟⲗ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --></a></div><div class="line" line="29"><!--
---><a><span>ⲧⲉϥ</span><!-- end of "" --><span>ⲣⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ϣⲟⲙⲛⲧ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --></a></div><div class="line" line="30"><!--
---><a><span>ϩⲟⲟⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>.</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇ⲧⲉ</span><!-- end of "" --><span>ⲧⲙ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲗⲁ</span><!-- end of "" --><span>ⲁⲩ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="31"><!--
---><a> <!--
---><span>ⲧⲁⲓ̇ⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ϥⲓ̇ⲧ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><hi_rend rend="red"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧⲟ</span><!-- end of "" --><span>ⲧⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="32"><!--
---><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>Ⲫ</span><!-- end of "" --><span>ⲟⲣⲓ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇ⲙⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --></div><table><!--
---><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --></table><!-- end of "" --><!-- end of "cb" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+--><span>Ⲛ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲧⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲟ̇ⲛ</span><!-- end of "" --><span>ⲁ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="23"><!--
+--><span>ⲁ̇</span><!-- end of "" --><span>ⲁ̇ⲡⲁ</span><!-- end of "" --><span>ⲡⲁⲙⲃⲱ</span><!-- end of "" --><span>ϫⲟⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="24"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲧⲁⲓ̇</span><!-- end of "" --><span>ⲧⲉ</span><!-- end of "" --><span>ⲑ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲉ̇ⲧⲉ</span><!-- end of "" --><span>ϣ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="25"><!--
+--><span>ϣⲉ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲙⲟⲛⲁⲭⲟⲥ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="26"><!--
+--><span>Ⲫ</span><!-- end of "" --><span>ⲟⲣⲉⲓ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲛⲉϥ</span><!-- end of "" --><span>ϩⲟⲓ̇ⲧⲉ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="27"><!--
+--><span>ϩⲱⲥⲧⲉ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲛⲉϫ</span><!-- end of "" --><span>ⲧⲉϥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="28"><!--
+--><span>ϣ̇ⲧⲏⲛ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡ̇</span><!-- end of "" --><span>ⲃⲟⲗ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="29"><!--
+--><span>ⲧⲉϥ</span><!-- end of "" --><span>ⲣⲓ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϣⲟⲙⲛⲧ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="30"><!--
+--><span>ϩⲟⲟⲩ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>.</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲛ̇ⲧⲉ</span><!-- end of "" --><span>ⲧⲙ̇</span><!-- end of "" --><span>ⲗⲁ</span><!-- end of "" --><span>ⲁⲩ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="31"><!--
+--><span>ⲧⲁⲓ̇ⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ϥⲓ̇ⲧ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><hi_rend rend="red"><!--
+--><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲧⲟ</span><!-- end of "" --><span>ⲧⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="32"><!--
+--><span>ⲉ̇</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>Ⲫ</span><!-- end of "" --><span>ⲟⲣⲓ̇</span><!-- end of "" --><span>ⲙ̇ⲙⲟ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "" --></div></div>
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
