--- a/download/corpora/AP/AP.42.sarah_dipl.html
+++ b/download/corpora/AP/AP.42.sarah_dipl.html
@@ -8,39 +8,32 @@
 
 	<title>AP.42.sarah - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><div class="line" line="28"><!--
---><a> <!--
---><hi_rend rend="oversized letter in left margin"><!--
---><span>ⲁ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ϫⲟⲟ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇ⲧⲃⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧ̇</span><!-- end of "" --><span>ⲙⲁⲕⲁ</span><!-- end of "" --></a></div><div class="line" line="29"><!--
---><a><span>ⲣⲓ̇ⲁ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲥⲁⲣⲁ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲧ̇</span><!-- end of "" --><span>ⲡⲁⲣⲑⲉⲛⲟⲥ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="30"><!--
---><a> <!--
---><span>ϫⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲁ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲉⲣ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲥⲉ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲛ̇</span><!-- end of "" --><span>ⲣⲟⲙⲡⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="31"><!--
---><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲟⲩⲏ̇ϩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉ</span><!-- end of "" --><span>ⲧⲡⲉ</span><!-- end of "" --></a><!-- end of "" --></div><div class="line" line="32"><!--
---><a> <!--
---><span>ⲙ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲓ̇ⲉ̇ⲣⲟ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>·</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲙ̇ⲡⲉ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></a></div><div class="line" line="33"><!--
---><a><span>ⲕⲉ</span><!-- end of "" --><span>ⲣⲁⲧ</span><!-- end of "" --><span>ⲥ̇</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇ⲃⲟⲗ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇ⲛⲉϩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --></a></div><div class="line" line="34"><!--
---><a><span>ⲛⲁⲩ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲓ̇ⲉ̇ⲣⲟ</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>.</span><!-- end of "" --></a><!-- end of "" --><a> <!--
---><span>ⲻ</span><!-- end of "" --></a><!-- end of "" --></div><table><!--
---><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --><!-- end of "line" --></table><!-- end of "" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+<!--October 9, 2014 by Caroline T. Schroeder-->
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table><!--
+--><tbody><tr><td class="cb"><!--
+--><div class="copt_line" line="28"><!--
+--><hi_rend rend="large, ekthetic"><!--
+--><span>ⲁ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ϫⲟⲟ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲉ̇ⲧⲃⲉ</span><!-- end of "" --><span>ⲧ̇</span><!-- end of "" --><span>ⲙⲁⲕⲁ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="29"><!--
+--><span>ⲣⲓ̇ⲁ̇</span><!-- end of "" --><span>ⲥⲁⲣⲁ</span><!-- end of "" --><span>ⲧ̇</span><!-- end of "" --><span>ⲡⲁⲣⲑⲉⲛⲟⲥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="30"><!--
+--><span>ϫⲉ</span><!-- end of "" --><span>ⲁ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲉⲣ</span><!-- end of "" --><span>ⲥⲉ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲣⲟⲙⲡⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="31"><!--
+--><span>ⲉ̇</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --><span>ⲟⲩⲏ̇ϩ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --><span>ⲡⲉ</span><!-- end of "" --><span>ⲧⲡⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="32"><!--
+--><span>ⲙ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲓ̇ⲉ̇ⲣⲟ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲙ̇ⲡⲉ</span><!-- end of "" --><span>ⲥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="33"><!--
+--><span>ⲕⲉ</span><!-- end of "" --><span>ⲣⲁⲧ</span><!-- end of "" --><span>ⲥ̇</span><!-- end of "" --><span>ⲉ̇ⲃⲟⲗ</span><!-- end of "" --><span>ⲉ̇ⲛⲉϩ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="34"><!--
+--><span>ⲛⲁⲩ</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲓ̇ⲉ̇ⲣⲟ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "" --></div></div>
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
